--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Aula Git hub</h1>
     <p>Teste - aula git hub</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi libero hic ipsum cupiditate ab. Reprehenderit, expedita laudantium delectus dolor hic illo enim accusantium repudiandae ipsum officia consequuntur doloribus dolorum iure!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corporis placeat possimus explicabo quis, laudantium repellat magni illo error expedita quae facilis inventore in labore suscipit earum corrupti non voluptates.</p>
 </body>
 </html>
