--- a/Página 4/index.html
+++ b/Página 4/index.html
@@ -53,7 +53,7 @@
         <footer>
             <div class="footer-content">
                 <p>&copy; 2024 Revolução Industrial. Todos os direitos reservados.</p>
-                <p>Desenvolvido por Rafael</p>
+                <p>Desenvolvido por Prime Web Developers.</p>
                 <div class="social-icons">
                     <a href="#"><img src="icone-facebook.png" alt="Facebook"></a>
                     <a href="#"><img src="icone-instagram.png" alt="Instagram"></a>
