--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <br>
             A Revolução Industrial foi um duradouro processo que se tornou marco histórico para a humanidade e pode ser definido como uma transformação radical na sociedade e na economia. Iniciada na Inglaterra aproximadamente no final do século 18, expandiu-se para outros países europeus, impulsionando o crescimento econômico e a urbanização. <br>
             <br>
+            
+            A Revolução provocou mudanças profundas nas dinâmicas da sociedade ao introduzir novas formas de produção, organização do trabalho e relações econômicas. A transição da produção rural para a industrialização nas cidades impulsionou o crescimento urbano, transformando as metrópoles da época em núcleos industriais e deslocando a ênfase econômica dos setores terciários para a produção industrial. <br> 
             <img src="industrias-da-primeira-revolucao-industrial-.webp" alt="indústria téxtil se popularizou"> <br>
             <br>
-            A Revolução provocou mudanças profundas nas dinâmicas da sociedade ao introduzir novas formas de produção, organização do trabalho e relações econômicas. A transição da produção rural para a industrialização nas cidades impulsionou o crescimento urbano, transformando as metrópoles da época em núcleos industriais e deslocando a ênfase econômica dos setores terciários para a produção industrial. <br>
             <br> Segundo Osvaldo Coggiola, professor de História Contemporânea da Faculdade de Filosofia, Letras e Ciências Humanas (FFLCH) da USP, “a paisagem rural e urbana nunca mais foi a mesma: na segunda metade do século XIX, toda a paisagem natural inglesa tinha sido alterada pela ação industrial do homem, nada restando de suas florestas originais”. <br>
             <br>
             
@@ -48,7 +49,7 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2024 Revolução Industrial. Todos os direitos reservados.</p>
-            <p>Desenvolvido por Rafael</p>
+            <p>Desenvolvido por Prime Web Developers.</p>
             <div class="social-icons">
                 <a href="#"><img src="icone-facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="icone-instagram.png" alt="Instagram"></a>
