--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>História da Revolução industrial</title>
+    <title>História da Revolução Industrial</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Prime web.png">
 </head>
