Algumas Alterações Básicas

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>&copy; 2024 Revolução Industrial. Todos os direitos reservados.</p>
             <p>Desenvolvido por Prime Web Developers.</p>
             <div class="social-icons">
-                <a href="#"><img src="icone-facebook.png" alt="Facebook"></a>
+                <a href="#"><img class="face" src="icone-facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="icone-instagram.png" alt="Instagram"></a>
                 <a href="#"><img src="icone-twitter.png" alt="Twitter"></a>
             </div>
