--- a/Página 4/index.html
+++ b/Página 4/index.html
@@ -31,7 +31,7 @@
                 <div class="member">
                     <img src="Rafael.jpeg" alt="Rafael">
                     <h3>Rafael</h3>
-                    <p class="mar">"Meu nome é Rafael, tenho 16 anos, <br> e sou apaixonado por tecnologia. <br> Estou cursando Desenvolvimento Web <br>para ampliar meus  conhecimentos e construir uma <br> carreira como   desenvolvedor Front-End." <br> <br>Responsável Por Desenvolver as Páginas.</p>
+                    <p class="mar">"Meu nome é Rafael, tenho 16 anos, <br> e sou apaixonado por tecnologia. <br> Estou cursando Desenvolvimento Web <br>para ampliar meus  conhecimentos e construir uma <br> carreira como   desenvolvedor Front-End." <br> <br>Responsável Por Desenvolver as Páginas Adicionais.</p>
                 </div>
                 <div class="member">
                     <img src="Mathues.jpeg" alt="Matheus">
