Adição de página

--- a/Página 4/index.html
+++ b/Página 4/index.html
@@ -19,6 +19,7 @@
         <h5><a href="../Página 2/index.html">2ª FASE »</a></h5>
         <h5><a href="../Página 3/index.html">3ª FASE »</a></h5>
         <h5>SOBRE NÓS »</h5>
+        <h5>ACESSE NOSSO SITE PELO QR CODE »</h5>
         </nav>
     </aside>
         <div class="texto">
@@ -31,22 +32,25 @@
                 <div class="member">
                     <img src="Rafael.jpeg" alt="Rafael">
                     <h3>Rafael</h3>
-                    <p class="mar">"Meu nome é Rafael, tenho 16 anos, <br> e sou apaixonado por tecnologia. <br> Estou cursando Desenvolvimento Web <br>para ampliar meus  conhecimentos e construir uma <br> carreira como   desenvolvedor Front-End." <br> <br>Responsável Por Desenvolver as Páginas Adicionais.</p>
+                    <p class="mar">"Meu nome é Rafael, tenho 16 anos,  e sou apaixonado por tecnologia.  Estou cursando Desenvolvimento Web para ampliar meus  conhecimentos e construir uma carreira como   desenvolvedor Front-End." <br> <br>Responsável por: desenvolver as páginas do conteúdo.</p>
+    
                 </div>
                 <div class="member">
-                    <img src="Mathues.jpeg" alt="Matheus">
+                    <img src="Matheus.jpeg" alt="Matheus">
                     <h3>Matheus</h3>
-                    <p class="mar">Descrição do membro 2. Ele(a) é responsável por...</p>
+                    <p class="mar">"Me chamo Matheus Araujo, tenho 16 Anos,  atualmente, estou cursando Desenvolvimento Web, sou fissurado na área da tecnologia e na área automotiva." <br> <br>Responsável por: desenvolver as páginas iniciais. </p>
+                    
                 </div>
                 <div class="member">
                     <img src="Lucas.jpeg" alt="Lucas">
                     <h3>Lucas</h3>
-                    <p class="mar">Descrição do membro 3. Ele(a) é responsável por...</p>
+                    <p class="mar">"Sou o Lucas Aguiar, tenho 16 anos e estou buscando novas formas de expandir meus conhecimentos, e o Desenvolvimento Web é uma das formas que encontrei para me ajudar." <br> <br>Responsável por: Pesquisa de conteúdos e videos do site.</p>
                 </div>
                 <div class="member">
                     <img src="Keven.jpeg" alt="Keven">
                     <h3>Keven</h3>
-                    <p class="mar">Descrição do membro 4. Ele(a) é responsável por...</p>
+                    <p class="mar">"Olá, me chamo Keven, tenho 17 anos, sou apaixonado pela à história, e procuro sempre entender a história das coisas." <br> <br>
+                     Responsável por: Pesquisa dos conteúdos e pelas imagens do site.</p>
                 </div>
             </div>
         </div>       
