--- a/Página 4/index.html
+++ b/Página 4/index.html
@@ -19,7 +19,7 @@
         <h5><a href="../Página 2/index.html">2ª FASE »</a></h5>
         <h5><a href="../Página 3/index.html">3ª FASE »</a></h5>
         <h5>SOBRE NÓS »</h5>
-        <h5>ACESSE NOSSO SITE PELO QR CODE »</h5>
+        <h5><a href="../QRCODE/index.html">ACESSE NOSSO SITE PELO QR CODE »</a></h5>
         </nav>
     </aside>
         <div class="texto">
