--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
         <h1>MENU</h1> 
         <br>
-        <h5>PÁGINA INICIAL »</h5> 
+        <h5><a href="home.html">PÁGINA INICIAL »</a></h5> 
         <h5>1ª FASE »</h5>
         <h5><a href="Página 2/index.html">2ª FASE »</a></h5>
         <h5><a href="Página 3/index.html">3ª FASE »</a></h5>
